[gd_scene load_steps=7 format=3 uid="uid://ds7rk784hwp0a"]

[ext_resource type="Shader" uid="uid://btjpurw470nhn" path="res://scenes/UI/main_menu_ui.gdshader" id="1_2co0p"]
[ext_resource type="Script" uid="uid://owxo0gu8nhlt" path="res://scripts/UI/save_game_ui.gd" id="1_17qj6"]
[ext_resource type="FontFile" uid="uid://hke21ckgccrf" path="res://textures/Fonts/superstar-memesbruh03/superstar_memesbruh03.ttf" id="2_17qj6"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_820ml"]
noise_type = 0
frequency = 0.3395

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_17qj6"]
noise = SubResource("FastNoiseLite_820ml")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_icfw7"]
shader = ExtResource("1_2co0p")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_17qj6")
shader_parameter/density = 57.5
shader_parameter/speed_x = 100.0
shader_parameter/speed_y = 1.49012e-06
shader_parameter/layers = 10.0

[node name="SaveGameUI" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
script = ExtResource("1_17qj6")

[node name="ShaderBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_icfw7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 270.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_17qj6")
text = "Save Game"
horizontal_alignment = 1

[node name="SaveSlotButton1" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_17qj6")
text = "Slot 1:"

[node name="SaveSlotButton2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_17qj6")
text = "Slot 2:"

[node name="SaveSlotButton3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_17qj6")
text = "Slot 3:"

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_17qj6")
text = "Save or Error Message"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_17qj6")
text = "Cancel"

[node name="OverwriteConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Overwrite"
size = Vector2i(283, 100)
dialog_text = "This slot contains data. Overwrite?"

[connection signal="confirmed" from="OverwriteConfirmationDialog" to="." method="_on_overwrite_confirmation_dialog_confirmed"]
